fixed url so that it would path correctly

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div>
-  Hello Science Bowl sahohfdsaoipdfhpo
+  Hello Science Bowl
   <br><br>
   <a href="/addquestions.html">Add Questions</a>
   <br>
